feat(c2a): read withdrawn registrations
